# BigNum

./: CMakeLists.txt
include/: BigNum.h  Func.h  Info.h  Tests.h
src/: BigNum.cpp  BigNum.h  Func.h  Info.h  Tests.cpp  Tests.h  main.cpp
tests/: test.cpp
